--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -13,3 +13,14 @@
   font-weight: 600;
   margin-bottom: 30px;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  border: 1px solid #2c3e50;
+  border-radius: 10px;
+  background-color: bisque;
+  width: 100%;
+  max-width: 350px;
+}
