--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -24,3 +24,20 @@
   width: 100%;
   max-width: 350px;
 }
+
+.btn {
+  background-color:#0a0a23;
+  color: #fff;
+  padding: 15px 30px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: color, background-color 0.3s ease-in-out;
+  &:hover {
+    cursor: pointer;
+    background-color:#fff;
+    border-color: #0a0a23;
+    color: #0a0a23;
+  }
+}
